# minimp3

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  main.c  minimp3.zig
example/: main.zig
minimp3/: minimp3.zig
src/: main.c  main.zig  minimp3_impl.c  root.zig  types.zig  wrap.zig
